--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,18 @@
 # generated files
 bin/
 gen/
+lint.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+#MAC
+.DS_Store
+tmp
+
+#eclipse
+.classpath
+.settings
+
+proguard-project.txt
+
