change package name

--- a/CJAG-APPS/AndroidManifest.xml
+++ b/CJAG-APPS/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.android-group.cjag.workshop"
+    package="jp.android_group.cjag.workshop"
     android:versionCode="1"
     android:versionName="1.0">
 
